    players.
13. Smarter polling whilst playing. Only poll every second if in the first or
    last 6 seconds of a track.
14. Change clear queue icon to something (hopefully) more obvious.
15. Fix fetching more than 100 items in queue.
16. Click on song duration to toggle showing duration / time remaining.
17. For desktop layout, optionally show all 3 panes when showing track info.

0.1.1
-----
 1. Only list players that are connected.
 2. Add 'Play album starting at track' item to track context menus. Only if
    parent is an album, and track is not 1st track.
 3. Respect genre/artist filtering when adding albums/artists to queue.
 4. Add a setting to specify application layout; auto, desktop, mobile.
 5. Add optional grid view for artists, albums, and SlimBrowse icon_list.
 6. Fix durations longer than 24hrs.
 7. Add plugin update info to Information dialog.
 8. Disable swipe to change views whilst photo slideshow is open.
 9. When listing a genre's items, ask whether to list Artists or Albums.
10. Always send volume up commands, even if at 100% already.
11. List all artists of a track in toolbar, queue, and now playing.
12. Fix text/html weblinks.

0.1.0
-----
 1. After list is loaded, wait until next tick to scroll to top.
 2. Fix detection of first valid album when getting A..Z lists.
 3. Show context menu when clicking on an item that has actions.go=playControl
    or actions.go=play
 4. Initial work on desktop UI.
 5. Check with server to determine whether to show track numbers in queue.
 6. Colour current track in queue.
 7. Don't check artist/album in MusicArtistInfo is same as current track, as the
    plugin may remove characters (e.g. brackets).
 8. Clicking on title in browse sub-toolbar will produce a menu allowing
    navigation back multiple levels.
 9. Fix language update causing browse items to disappear.
10. Use artist_id and album_id to obtain info if available.

0.0.9
-----