@@ -20,6 +20,7 @@
 15. Fix fetching more than 100 items in queue.
 16. Click on song duration to toggle showing duration / time remaining.
 17. For desktop layout, optionally show all 3 panes when showing track info.
+18. Draw current cover behind track info.
 
 0.1.1
 -----
